<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="#e8f4f8">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#e6bbad">

        <TextView
            android:id="@+id/iniziali"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/rotondo"
            android:text="XX"
            android:textColor="#FFF"
            android:gravity="center"
            android:textSize="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="#add8e6"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textColor="#102c35"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e6bbad"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:backgroundTint="#ade6bb"
        android:layout_marginTop="20dp">
        <ImageButton
            android:id="@+id/chiamare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#add8e6"
            android:src="@drawable/ic_chiama"
            android:textSize="8dp"
            android:layout_marginHorizontal="1dp"/>
        <ImageButton
            android:id="@+id/sms"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_messaggio"
            android:backgroundTint="#add8e6"
            android:textSize="8dp"
            android:layout_marginHorizontal="1dp"/>
        <ImageButton
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_email"
            android:textSize="8dp"
            android:backgroundTint="#add8e6"
            android:layout_marginHorizontal="1dp"/>
        <ImageButton
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_address"
            android:textSize="8dp"
            android:backgroundTint="#add8e6"
            android:layout_marginHorizontal="1dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#add8e6"
            android:text="@string/chiama"
            android:textColor="#102c35"
            android:textAllCaps="true"
            android:textSize="14dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="1dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#add8e6"
            android:text="@string/sms"
            android:textColor="#102c35"
            android:textAllCaps="true"
            android:textSize="14dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="1dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#add8e6"
            android:text="@string/email"
            android:textColor="#102c35"
            android:textAllCaps="true"
            android:textSize="14dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="1dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#add8e6"
            android:text="@string/indirizzo"
            android:textColor="#102c35"
            android:textAllCaps="true"
            android:textSize="14dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="1dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e6bbad"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="4"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/ans2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:backgroundTint="#add8e6"
            android:text="@string/chiama"
            android:textColor="#102c35"
            android:textAllCaps="true"
            android:textSize="28dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="1dp"/>
    </LinearLayout>


















</LinearLayout>